context API concept

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,14 @@
 .App-link {
   color: #61dafb;
 }
-
+.light{
+  color:black;
+  background-color: white;
+}
+.dark{
+  color:white;
+  background-color: #3d3d3d;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
